fixed the spacing between totals and sell complete sets button (#2892)

--- a/src/modules/modal/modal.styles.less
+++ b/src/modules/modal/modal.styles.less
@@ -594,6 +594,10 @@
   margin: 0 0 @size-8;
 }
 
+div.ButtonsRow:last-of-type {
+  margin-top: @size-24;
+}
+
 .Breakdown {
   > h4 {
     .mono-10;
